--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "core-js": "^3.4.3",
     "jquery": "^3.4.1",
     "popper.js": "^1.16.0",
+    "uuid": "^3.3.3",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3"
   },
