--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "popper.js": "^1.16.0",
     "sweetalert2": "^9.5.3",
     "uuid": "^3.3.3",
+    "vee-validate": "^3.2.1",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2",
