--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
     "@fortawesome/free-regular-svg-icons": "^5.12.0",
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@fortawesome/vue-fontawesome": "^0.1.8",
+    "@uppy/core": "^1.7.0",
+    "@uppy/dashboard": "^1.5.1",
+    "@uppy/xhr-upload": "^1.4.1",
     "axios": "^0.19.0",
     "bootstrap": "^4.4.1",
     "core-js": "^3.4.3",
     "jquery": "^3.4.1",
     "popper.js": "^1.16.0",
     "sweetalert2": "^9.5.3",
+    "uppy": "^1.7.0",
     "uuid": "^3.3.3",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
