--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vee-validate": "^3.2.1",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
+    "vue-social-sharing": "^2.4.7",
     "vuex": "^3.1.2",
     "vuex-persist": "^2.2.0"
   },
