--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@fortawesome/vue-fontawesome": "^0.1.8",
     "@uppy/core": "^1.7.0",
     "@uppy/dashboard": "^1.5.1",
+    "@uppy/file-input": "^1.4.1",
+    "@uppy/url": "^1.4.1",
     "@uppy/xhr-upload": "^1.4.1",
     "axios": "^0.19.0",
     "bootstrap": "^4.4.1",
