--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "uuid": "^3.3.3",
     "vee-validate": "^3.2.1",
     "vue": "^2.6.10",
+    "vue-load-image": "^0.1.9",
     "vue-router": "^3.1.3",
     "vue-social-sharing": "^2.4.7",
     "vuex": "^3.1.2",
