--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "vue": "^2.6.10",
     "vue-load-image": "^0.1.9",
     "vue-router": "^3.1.3",
+    "vue-scrollto": "^2.17.1",
     "vue-social-sharing": "^2.4.7",
     "vuex": "^3.1.2",
     "vuex-persist": "^2.2.0"
